--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,6 +30,7 @@ subjects:
 - !lcsh 'Free thought'
 - !lcc 'BL'
 - !lcc 'AC'
+- GITenberg
 title: 'The Works of Robert G. Ingersoll, Volume VIII.
 
   Interviews'
